examples/test/testpolicy19655.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19655
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key5: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value7
          key0: value18
          key23: value0
      podSelector:
        matchLabels:
          key23: value39
